# docxTopdf

./: .gitignore  README.md  build_pyinstaller.cmd  install_local.cmd  pyproject.toml  requirements.txt  run_app.cmd
src/: conversion_report.py  docx_converter.py  docx_to_pdf_zip_app.py  report_dialog.py
